--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
             <version>2.13.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.penggle</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
