--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -48,7 +48,7 @@ spring:
 flow-limit:
   enable: true
   time-window: 1
-  max-access-count: 2
+  max-access-count: 5
 
 management:
   endpoints:
@@ -60,3 +60,8 @@ management:
       enabled: true
     health:
       show-details: always
+
+mybatis-plus:
+  global-config:
+    db-config:
+      id-type: auto
