--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <jackson-databind.version>2.13.4</jackson-databind.version>
         <jackson-datatype-jsr310.version>2.13.4</jackson-datatype-jsr310.version>
         <kaptcha.version>2.3.2</kaptcha.version>
+        <xxl-job-core.version>2.3.1</xxl-job-core.version>
     </properties>
 
     <dependencyManagement>
@@ -135,6 +136,18 @@
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>${xxl-job-core.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
