--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <jackson-datatype-jsr310.version>2.13.4</jackson-datatype-jsr310.version>
         <kaptcha.version>2.3.2</kaptcha.version>
         <xxl-job-core.version>2.3.1</xxl-job-core.version>
+        <rest-high-level-client.version>7.17.10</rest-high-level-client.version>
     </properties>
 
     <dependencyManagement>
@@ -149,6 +150,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>${rest-high-level-client.version}</version>
+        </dependency>
+
 
     </dependencies>
     <build>
