--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <kaptcha.version>2.3.2</kaptcha.version>
         <xxl-job-core.version>2.3.1</xxl-job-core.version>
         <rest-high-level-client.version>7.17.10</rest-high-level-client.version>
+        <canal.client.version>1.1.0</canal.client.version>
     </properties>
 
     <dependencyManagement>
@@ -157,7 +158,11 @@
             <version>${rest-high-level-client.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.alibaba.otter</groupId>
+            <artifactId>canal.client</artifactId>
+            <version>${canal.client.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
