修改为 stream 同步 ES

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -78,14 +78,16 @@ xxl:
     accessToken: default_token
     executor:
       appname: answerly
+      address: ""
+      ip: ""
       port: 9998
+      logpath:
       logretentiondays: 7
 
 elasticsearch:
   host: nurl.top
   index-name: question
 
-canal:
-  host: localhost
-  port: 11111
-  destination: example
+
+
+
