--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,11 @@
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
             <version>${rest-high-level-client.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
