--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,12 +19,11 @@ spring:
 
   data:
     redis:
-      host: 127.0.0.1
+      host: localhost
       port: 6379
 
   elasticsearch:
     username: elastic
-    password: ysh030605
 
   mail:
     protocol: smtps
