--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <xxl-job-core.version>2.3.1</xxl-job-core.version>
         <rest-high-level-client.version>7.17.10</rest-high-level-client.version>
         <elasticsearch-client.version>7.17.10</elasticsearch-client.version>
+        <poi-ooxml.version>5.2.3</poi-ooxml.version>
     </properties>
 
     <dependencies>
@@ -149,6 +150,12 @@
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
             <version>${rest-high-level-client.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.9</version>
         </dependency>
     </dependencies>
     <build>
