--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,11 +19,12 @@ spring:
 
   data:
     redis:
-      host: localhost
+      host: 127.0.0.1
       port: 6379
 
   elasticsearch:
     username: elastic
+    password: ysh030605
 
   mail:
     protocol: smtps
