--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/answerly?useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://43.143.231.162:3306/answerly?useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -19,30 +19,23 @@ spring:
 
   data:
     redis:
-      host: 127.0.0.1
+      host: 43.143.231.162
       port: 6379
 
   elasticsearch:
     username: elastic
-    password: ysh030605
+    password:
 
   mail:
     protocol: smtps
     host: smtp.163.com
     port: 465
     username: buaa_yzd@163.com
-    password: RBdFP4r9FfXcJazi
+    password:
     default-encoding: UTF-8
     from: buaa_yzd@163.com
     properties:
       mail.smtp.socketFactoryClass: javax.net.ssl.SSLSocketFactory
-
-  aliyun:
-    oss:
-      endpoint: https://oss-cn-beijing.aliyuncs.com
-      accessKeyId: ${ALIBABA_ACCESS_KEY_ID}
-      accessKeySecret: ${ALIBABA_ACCESS_KEY_SECRET}
-      bucketName: answerly
 
   servlet:
     multipart:
@@ -71,23 +64,15 @@ mybatis-plus:
     db-config:
       id-type: auto
 
-xxl:
-  job:
-    admin:
-      addresses: http://127.0.0.1:8089/xxl-job-admin
-    accessToken: default_token
-    executor:
-      appname: answerly
-      address: ""
-      ip: ""
-      port: 9998
-      logpath:
-      logretentiondays: 7
-
 elasticsearch:
-  host: nurl.top
+  host: 43.143.231.162
   index-name: question
 
-
+tencent:
+  cos:
+    secretId:
+    secretKey:
+    region: ap-beijing
+    bucketName: yuanzhida-cos-1352975306
 
 
