--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://43.143.231.162:3306/answerly?useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: 72232b47-815b-4e27-9df7-9e590ca32b71
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       connection-test-query: select 1
@@ -21,17 +21,18 @@ spring:
     redis:
       host: 43.143.231.162
       port: 6379
+      password: 18747796-f035-4bb3-b51c-f8ac64890aea
 
   elasticsearch:
     username: elastic
-    password:
+    password: elastic
 
   mail:
     protocol: smtps
     host: smtp.163.com
     port: 465
     username: buaa_yzd@163.com
-    password:
+    password: RBdFP4r9FfXcJazi
     default-encoding: UTF-8
     from: buaa_yzd@163.com
     properties:
@@ -70,8 +71,8 @@ elasticsearch:
 
 tencent:
   cos:
-    secretId:
-    secretKey:
+    secretId: AKIDiRxGMNDpHWZN3YrxqWzEH71zysgJjdPz
+    secretKey: Vo177vX6XovzxISSF9rMfldHjy61iEJS
     region: ap-beijing
     bucketName: yuanzhida-cos-1352975306
 
